examples/test_package/Double_dc_only_report_tool/steps/pl___coin__precise_run1/#test_results_result.txt
Error evaluating Problog model:
    return self.collapse(string, tokens)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 1282, in collapse
    raise UnmatchedCharacter(string, expr_stack[-1].start.location)
problog.parser.UnmatchedCharacter: Unmatched character '(' at 8:5.% Problog Inference Result：
total(4) = 0.4096
total(3) = 0.4096
total(2) = 0.1536
total(1) = 0.0256
total(0) = 0.0016